--- a/scss/partials/_article.scss
+++ b/scss/partials/_article.scss
@@ -14,33 +14,66 @@ article {
     flex-direction: column;
   }
 
+
+
   .page-title {
     flex: 1 0 0;
+    padding-right: 1em;
+
+    // Small screens
+      @media only screen
+      and (max-width: 50em) {
+
+    }
 
     h5 {
       color: $rd-md;
       margin-bottom: 0.5em;
-      padding-bottom: 0.5em;
+      padding: 0 3rem 0.5em;
       border-bottom: thin solid $rd-tr-5;
+
     }
     h3 {
       font-weight: 600;
+      padding: 0 3rem;
     }
   }
   .page-descr {
     flex: 1 0 0;
+    display: flex;
+    flex-direction: column;
+    padding-left: 1em;
+
+    > * {
+
+      &:not(figure) {
+        // Small screens
+        @media only screen
+        and (max-width: 50em) {
+          padding: 0 3em;
+        }
+      }
+    }
   }
   p {
     margin-bottom: 1em;
     line-height: 1.5;
+
+    // Small screens
+    @media only screen
+    and (max-width: 50em) {
+      // padding: 0 3em;
+    }
   }
 
 
 
   figure {
     margin-bottom: 1em;
+    flex: 0 0 0;
     img {
       display: block;
+      width: 100%;
     }
     figcaption {
       font-style: italic;
@@ -64,6 +97,12 @@ article {
   ul {
     margin-bottom: 1em;
 
+    // Small screens
+    @media only screen
+    and (max-width: 50em) {
+      padding: 0 3em;
+    }
+
     > li {
 
       &::before {
@@ -83,6 +122,7 @@ article {
     margin-bottom: 1em;
     counter-reset: li; /* Initiate a counter */
     list-style: none; /* Remove default numbering */
+
 
     > li {
 
