--- a/scss/partials/_structure.scss
+++ b/scss/partials/_structure.scss
@@ -5,7 +5,7 @@ section {
   // Small screens
   @media only screen
   and (max-width: 50em) {
-    width: 80vw;
+    width: 100vw;
   }
 
 }
@@ -16,10 +16,22 @@ section {
   position: fixed;
   display: block;
   right: 1em;
-  bottom: 1em;
+  top: 5em;
   background-image: $sprite;
   background-repeat: no-repeat;
   background-position: 50% -235px;
-  z-index: 120;
+  z-index: 12;
   text-indent: -9999px;
+  transition: all .5s ease-in-out;
+
+  // Small screens
+  @media only screen
+  and (max-width: 50em) {
+    top: 8em;
+  }
+
+  &:hover {
+    bottom: 1.5em;
+    transition: all .2s ease-in-out;
+  }
 }
