--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,5 +7,6 @@
 @import 'partials/header';
 @import 'partials/navigation';
 @import 'partials/structure';
-@import 'partials/article';
+// @import 'partials/article';
+@import 'partials/article-n';
 @import 'partials/footer';
