--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,9 +1,9 @@
 header {
   width: 100vw;
-  height: 100vh;
+  height: 60vh;
   background: $bk-tr-5;
   font-family: $body-font;
-  background-image: url(//lorempixel.com/1000/1000);
+  background-image: url(https://unsplash.it/1000/1000);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -12,14 +12,14 @@ header {
   // Small screens
   @media only screen
   and (max-width: 50em) {
-    height: 60vh;
+    height: 100vh;
   }
 
   &::after {
     content: '';
     position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: 60vh;
     display: block;
     top: 0;
     background: linear-gradient(to bottom, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 18%,rgba(0,0,0,0) 27%,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 100%);
@@ -27,7 +27,7 @@ header {
     // Small screens
     @media only screen
     and (max-width: 50em) {
-      height: 60vh;
+      height: 100vh;
     }
   }
 
