--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -1,4 +1,4 @@
-/* Headline Font */
+/* HEADLINE FONT */
 
   @font-face {
     font-family: 'Overpass'
@@ -99,9 +99,40 @@ strong {
 em {
   font-style: italic;
 }
+
+hgroup {
+
+  // Small screens
+  @media only screen
+  and (max-width: 50em) {
+    padding: 0;
+    width: 100vw;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  h5 {
+    color: $rd-md;
+    margin-bottom: 0.5em;
+    padding: 0 0 0.5em;
+    border-bottom: thin solid $rd-tr-5;
+
+  }
+  h3 {
+    font-weight: 600;
+    padding: 0 0;
+  }
+}
+
 p {
   margin-bottom: 1em;
   line-height: 1.5;
+
+  // Small screens
+  @media only screen
+  and (max-width: 50em) {
+    // padding: 0 3em;
+  }
 }
 
 article {
