--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,5 +8,8 @@
 @import 'partials/navigation';
 @import 'partials/structure';
 // @import 'partials/article';
-@import 'partials/article-n';
+// @import 'partials/article-n';
+@import 'partials/article-grid';
+@import 'partials/images';
+@import 'partials/lists';
 @import 'partials/footer';
