--- a/scss/partials/_article-grid.scss
+++ b/scss/partials/_article-grid.scss
@@ -1,20 +1,17 @@
 section {
   padding-top: 5em;
+  position: relative;
+  top: 0;
 }
 article {
-  @include span-columns(2);
-  position: relative;
-
-  @include media($mobile) { // As defined in _grid-settings.scss
-    @include span-columns(4);
-  }
-
-
 
   hgroup {
     @include span-columns(2 of 2);
     @include shift(0 of 2);
     padding: 0;
+    @include media($mobile) {
+      width: 100vw;
+    }
     h5 {
       border-bottom: thick solid $rd-tr-8;
       margin-bottom: 0.5em;
@@ -38,10 +35,13 @@ article {
     @include span-columns(1 of 2);
     @include shift(1 of 2);
 
+
     @include media($mobile) { // As defined in _grid-settings.scss
       @include span-columns(0 of 2);
       @include shift(0 of 2);
       padding: 0 3em;
+      width: 100vw;
+      float: none !important;
     }
 
   }
