--- a/scss/_grid-settings.scss
+++ b/scss/_grid-settings.scss
@@ -1,11 +1,11 @@
 @import "neat/neat-helpers"; // or "neat-helpers" when in Rails
 
 // Change the grid settings
-$column: 50%;
-$gutter: 10%;
+$column: 490px;
+$gutter: 10px;
 $grid-columns: 2;
-$max-width: 50em;
+$max-width: 800px;
 
 // Define your breakpoints
 
-$mobile: new-breakpoint(max-width 50em 2);
+$mobile: new-breakpoint(max-width 800px 4);
