--- a/scss/partials/_lists.scss
+++ b/scss/partials/_lists.scss
@@ -31,6 +31,7 @@ article{
       @include media($mobile) {
         @include span-columns(2 of 2);
         padding: 0 3em;
+        width: 100vw;
       }
 
 
