--- a/scss/partials/_navigation.scss
+++ b/scss/partials/_navigation.scss
@@ -19,18 +19,23 @@ nav {
     clip: rect(0, 0, 0, 0);
 
     &:checked {
+
       + label {
+
         // Small screens
         @media only screen
         and (max-width: 50em) {
           display: block;
         }
+
         + .navigation {
+
           // Small screens
           @media only screen
           and (max-width: 50em) {
             overflow: scroll;
-            max-height: 100vh;
+            min-height: 60vh;
+            max-height: auto;
             opacity: 1;
           }
         }
@@ -44,7 +49,9 @@ nav {
       and (max-width: 50em) {
         display: block;
       }
+
       + .navigation {
+
         // Small screens
         @media only screen
         and (max-width: 50em) {
@@ -72,6 +79,8 @@ nav {
       top: 1em;
   }
 
+
+
   ul {
     display: flex;
     justify-content: space-between;
@@ -81,6 +90,8 @@ nav {
     and (max-width: 50em) {
       display: block;
     }
+
+
   }
 
   li {
@@ -93,6 +104,7 @@ nav {
     and (max-width: 50em) {
       border: none;
     }
+
     &:first-child {
       border: none;
     }
@@ -109,6 +121,19 @@ nav {
     }
   }
 }
-
+section {
+  // Small screens
+  @media only screen
+  and (max-width: 50em) {
+    // min-width: 100%;
+    // min-height: 100%;
+    // background-color: #fff;
+    // position: relative;
+    // top: 0;
+    // bottom: 100%;
+    // left: 0;
+    // z-index: 1;
+  }
+}
 
 
