--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 @import 'partials/variables';
 @import 'partials/reset';
 
-@import "grid-settings";
+// @import "grid-settings";
 
 @import 'partials/typography';
 
@@ -9,13 +9,10 @@
 @import 'partials/header';
 @import 'partials/navigation';
 @import 'partials/structure';
-<<<<<<< HEAD
 // @import 'partials/article';
 @import 'partials/article-n';
 // @import 'partials/article-grid';
 @import 'partials/images';
 @import 'partials/lists';
-=======
 @import 'partials/article';
->>>>>>> parent of 3e8ebbf... Navigation
 @import 'partials/footer';
