--- a/scss/partials/_images.scss
+++ b/scss/partials/_images.scss
@@ -2,11 +2,10 @@ figure {
   margin-bottom: 1em;
   position: absolute;
   padding: 6em 1em 0 0;
-  @include shift(0 of 2);
 
   // height: 100%;
 
-  @include media($mobile) {
+  @include mobile {
     width: 100vw;
     margin: 0 0 2rem;
     padding: 0;
